Fixed flex direction on small displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,4 +419,8 @@ hr {
         display: block;
         padding-left: 0;
     }
+
+    #split {
+        flex-direction: column;
+    }
 }
